*Empty MediaWiki Message*

--- a/Кочкур_веле_(Кочкурбуе).mw
+++ b/Кочкур_веле_(Кочкурбуе).mw
@@ -71,6 +71,7 @@
 == Содавикс ломанть те велестэнть ==
 Кочкур велесэ чачсть:
 * [[Агейкин, Григорий Петрович|Г. П. Агейкин]]<ref name="Чилисема">[http://chilisema.ru/upload/iblock/b7b/5-15-ilovepdf-compressed.pdf  «Чилисема» ￼2015ие  №5, АГЕЙКИН Григорий Петрович] {{Ref-myv}}</ref> —  эрзянь сёрмадей ды валморозей
+*  [[Дедаев, Николай Алексеевич|Николай Дедаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор. 
 * К.Е. Готина  — тонавтыця
 * К.С. Шубников —  ({{Lang-ru| полный кавалер ордена Славы}}) 
 * А.Ф. Занькин — ({{Lang-ru|1-ый заместитель Председателя Государственного Собрания РМ}}) 
@@ -79,7 +80,7 @@
 
 ==Веленть эрямозо==
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|К]]
