*Empty MediaWiki Message*

--- a/Шугур_веле_(Покш_Килейбуе).mw
+++ b/Шугур_веле_(Покш_Килейбуе).mw
@@ -74,14 +74,14 @@
 * И. И. Абрамов — ({{Lang-ru|председатель Государственного комитета Республики Мордовия по управлению государственным имуществом}})
 * А. Г. Осипов<ref name="Эрзянь Мастор479"/> — заслуженной МВД СССР-нь важодиця
 * И. В. Осипов<ref name="Эрзянь Мастор479"/> — партиянь важодиця 
-* В. И. Дёмин<ref name="Эрзянь Мастор479"/> — литератураньветиця
+* [[Дёмин Василий Иванович|Василий Дёмин]]<ref name="Эрзянь Мастор479"/> — литератураньветий, профессор, филологиянь наукань кандидат 
 * Н. В. Зиновьев<ref name="Эрзянь Мастор479"/> —  филологиянь наукань кандидат
 * Г. Г. Поляков<ref name="Эрзянь Мастор479"/> — техник-строитель
 * [[Ромашкин, Петра Семенович|Пётр Ромашкин]]<ref name="Эрзянь Мастор479"/> — юрист
 * М. Ф. Лияскин<ref name="Эрзянь Мастор479"/> — шофер
 * Л. Г. Ефимкина<ref name="Эрзянь Мастор479"/> — шожда атлет
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 [[Category:Мордовиянь велеть]]
 [[Category:Покш Килейбуень велеть]]
