/* Содавикс ломанть те велестэнть */

--- a/Шугур_веле_(Покш_Килейбуе).mw
+++ b/Шугур_веле_(Покш_Килейбуе).mw
@@ -74,7 +74,7 @@
 * И. И. Абрамов — ({{Lang-ru|председатель Государственного комитета Республики Мордовия по управлению государственным имуществом}})
 * А. Г. Осипов<ref name="Эрзянь Мастор479"/> — заслуженной МВД СССР-нь важодиця
 * И. В. Осипов<ref name="Эрзянь Мастор479"/> — партиянь важодиця 
-* [[Дёмин Василий Иванович|Василий Дёмин]]<ref name="Эрзянь Мастор479"/> — литератураньветий, профессор, филологиянь наукань кандидат 
+* [[Дёмин, Василий Иванович|Василий Дёмин]]<ref name="Эрзянь Мастор479"/> — литератураньветий, профессор, филологиянь наукань кандидат 
 * Н. В. Зиновьев<ref name="Эрзянь Мастор479"/> —  филологиянь наукань кандидат
 * Г. Г. Поляков<ref name="Эрзянь Мастор479"/> — техник-строитель
 * [[Ромашкин, Петра Семенович|Пётр Ромашкин]]<ref name="Эрзянь Мастор479"/> — юрист
