*Empty MediaWiki Message*

--- a/Дёмин,_Василий_Иванович.mw
+++ b/Дёмин,_Василий_Иванович.mw
@@ -35,10 +35,7 @@
 * Демин В.И. , Данильчев А.А. , The poem «Norovzhorch» («Lark») of the Erzya poet A. K. Martynov as a lyrical monologue about destinies of the people and the country , ХХIХ International Finno-Ugrie Students' Conference: тезисы, ГАОУ ИПО КРАГСиУ, Сыктывкар, 2013, 168 - {{Ref-en}}
 
 === Рузонь кельсэ===
-* Дёмин, В. «Мон моран морот сорныця вайгельсэ…» // Сятко.- 2003.- № 4.- С. 92-120. {{Ref-ru}}
-* Дёмин, В. И.  «Мон моран морот сорныця вайгельсэ…» // Дёмин, В. И. Сюконян тенк…: эрзянь писательде ёвтнемат.- Саранск, 2005.- С. 160-180. {{Ref-ru}}
-* Демин В. И. Моран Россиясо эсень эрзянь / Я пою в России на своем эрзянском / Монография. - Саранск: Мордов.кн.изд-во,2008.-232 с.1000 экз. {{Ref-ru}}
-* Демин В. И. Литературань лувтнэнь коряс витнема-петнема : Теориянь содамочить ды топавтома тевть : тонавтнемапель / В. И. Демин. – Саранск : Мордовиянь гос. ун-т, 2010. - 173, [2] с.; 20 см.; ISBN 978-5-7103-2215-4  {{Ref-ru}}
+* Демин В.И. Вопреки всему//Литературная Россия. – 2002. - 28 июня. {{Ref-ru}}
 * Демин В.И. , Шаги. Научные основы мордовского литературоведения , Ашмаринские чтения: сб. материалов IХ Междунар. науч.-практ. конф.., 9–11 октября 2014 г. , Изд-во Чуваш. ун-та, Чебоксары, 2014, 244 - 247 {{Ref-ru}}
 * Демин В.И. , Великая любовь профессора Г. А. Ермаковой - Айги, Особенности концепций творчества в культуре Урало-Поволжья: материалы межрегион. науч.-практ. конф., "Новое время", Чебоксары, 2013, 3 - 9-  {{Ref-ru}}
 * Демин В.И. , Начало. Первые мордовские письменные памятники, Проблемы создания региональной истории литератур народов Поволжья: региональной научно-практической конференции материалы, Новое время, Чебоксары, 2014, 18 - 24-  {{Ref-ru}}
@@ -47,6 +44,11 @@
 * Демин В.И. , А. М. Доронин - очеркист, Н. П. Огарёв: историко-культурное измерение творческой личности: сб. материалов всерос. науч. конф. с междунар. участием, Изд-во Мордов ун-та, Саранск, 2013, 296 - 299-  {{Ref-ru}}
 * Демин В.И. , Современная мордовская повесть: синтез традиционного и новаторского , Проблемы марийской и сравнительной филологии: сб. статей, Мар. гос. ун-т, Йошкар-Ола, 2014, 95 - 106-  {{Ref-ru}}
 ===Эрзянь кельсэ ===
+* Демин В. “Вайгеленть” вайгелезэ (Интервью пред. о-ва “Голос” Д. В. Цыганкина о пробл. яз.в республике // Эрзянь правда. – 1990.– 12.07. {{Ref-myv}}
+* Дёмин, В. «Мон моран морот сорныця вайгельсэ…» // Сятко.- 2003.- № 4.- С. 92-120.  {{Ref-myv}}
+* Дёмин, В. И.  «Мон моран морот сорныця вайгельсэ…» // Дёмин, В. И. Сюконян тенк…: эрзянь писательде ёвтнемат.- Саранск, 2005.- С. 160-180.  {{Ref-myv}}
+* Демин В. И. Моран Россиясо эсень эрзянь / Я пою в России на своем эрзянском / Монография. - Саранск: Мордов.кн.изд-во,2008.-232 с.1000 экз.  {{Ref-myv}}
+* Демин В. И. Литературань лувтнэнь коряс витнема-петнема : Теориянь содамочить ды топавтома тевть : тонавтнемапель / В. И. Демин. – Саранск : Мордовиянь гос. ун-т, 2010. - 173, [2] с.; 20 см.; ISBN 978-5-7103-2215-4   {{Ref-myv}}
 *Кашкирова О. , Демин В.И. , "Кода састь тень неть валтнэ, а содан..." Числав Журавлёвонь нурька стихтензэ ("Как нашлись эти слова, не знаю..." О коротких стихах Числава Журавлёва), Сятко, Саранск, 2013, 8, 104 - 111 {{Ref-myv}}
 * Демин В.И. , «Кидеяк а сёпса эсень мелем…» («Ни от кого не скрою я желанье…»), Сятко, Саранск, 2014, 4, 70 - 79- {{Ref-myv}}
 * Демин В.И. , «Ойменть а наксавтомс, ломаньксчинть а правтомс…» («Душу не опустошить, человека в себе не потерять…») , Сятко, Саранск, 2014, 6, 62 - 79- {{Ref-myv}}
