*Empty MediaWiki Message*

--- a/Мокшень_Пимбур_(Пейкужо_буе).mw
+++ b/Мокшень_Пимбур_(Пейкужо_буе).mw
@@ -39,8 +39,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 478
-  |год переписи           = 2014
+  |эрицятне               = 555<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
   |национальный состав    = [[мокшот]]
@@ -58,9 +58,27 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Мокшень Пимбур''' ({{Lang-ru|Мордовский Пимбур}}, {{Lang-mdf|Мокшень Пимбур, Пимбора}}) — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]].
+'''Мокшень Пимбур<ref name="РГО_с. Мордовский Пимбур">[http://geo13.ru/reestr/object/567 Геопортал РГО в Республике Мордовия: с. Мордовский Пимбур] {{Ref-ru}}</ref>''', лиякс: '''Пимбора<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|с. Мордовский Пимбур}}) — [[мокшот|мокшонь]]<ref name="РГО_с. Мордовский Пимбур"/> веле [[Мордовия Республикась|Мордовия Республикасонть]].
 Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
 
+Ашти [[Бель лей]] лангсо, [[Чиуш лей|Чиуш леень]] сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Никольское (Мордовский Пимбур) – веле 265 кардазт-кудот марто Спасонь уездсэ''.}}
+{{oq|ru|В «СНМ Тамбовской губернии» (1866) – Никольское (Мордовский Пимбур), село из 265 дворов  Спасского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 633 лом., [[2010 ие]]нь ловномасонть — 555 лом., [[2014 ие]]стэ —  478 лом. [[XIX пинге]]стэ эрицятнеде ульнесть 2600<ref name="РГО_с. Мордовский Пимбур"/> ломанть.
+== Веленть лемденть  ==
+Валось ''Пимбур ~ Помбура'' саеви ({{lang-mdf|пень}}  - {{lang-ru|«край, последний»}}) + ({{lang-mdf|пора}}  - {{lang-ru|«роща»}})<ref name="Память, запечатленная в слове"/>'' валтнестэ. 
+
+== Содавикс ломанть те велестэнть ==
+Мокшонь Куженя велесэ чачсь:
+* [[Пудин, Александр Иванович|Александр Пудин]]<ref name="Библиотека_Пудин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=11 Библиотека Мордовской литературы. Пудин Александр Иванович] {{ref-ru}}</ref>—  мокшонь  сёрмадей. 
+
+== Веленть эрямозо  ==
+Велень мокшотне ульнесть совавтонь православияс 1743-1744 иетнестэ. Ульнесь стявтозь-путозь [[Чувтт|чувт]]осто Никольской церькува ([[1862 ие]]). 
+
+== Лисьм.: ==
+<references />
 
 [[Category:Мордовиянь велеть|М]]
 [[Category:Пейкужо буень велеть|М]]
