*Empty MediaWiki Message*

--- a/Мокшень_Пимбур_(Пейкужо_буе).mw
+++ b/Мокшень_Пимбур_(Пейкужо_буе).mw
@@ -62,7 +62,7 @@
 Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
 
 Ашти [[Бель лей]] лангсо, [[Чиуш лей|Чиуш леень]] сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
-{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Никольское (Мордовский Пимбур) – веле 265 кардазт-кудот марто Спасонь уездсэ''.}}
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Никольское (Мордовский Пимбур) – веле 265 кардазт-кудот (2 226<ref name="Е. Н. Мокшина">Мокшина, Е. Н. Из истории сакральных мест Республики Мордовия / Е. Н. Мокшина, Ю. В. Катламина // Вестник Мордовского университета. – 2014. – No 3. – С. 93–97.   ISSN 2313-0636{{ref-ru}}</ref>  лом.) марто Спасонь уездсэ''.}}
 {{oq|ru|В «СНМ Тамбовской губернии» (1866) – Никольское (Мордовский Пимбур), село из 265 дворов  Спасского уезда.}}
 {{Цитатань пе}}
 
@@ -71,11 +71,14 @@
 Валось ''Пимбур ~ Помбура'' саеви ({{lang-mdf|пень}}  - {{lang-ru|«край, последний»}}) + ({{lang-mdf|пора}}  - {{lang-ru|«роща»}})<ref name="Память, запечатленная в слове"/>'' валтнестэ. 
 
 == Содавикс ломанть те велестэнть ==
-Мокшонь Куженя велесэ чачсь:
+Мокшень Пимбур велесэ чачсь:
 * [[Пудин, Александр Иванович|Александр Пудин]]<ref name="Библиотека_Пудин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=11 Библиотека Мордовской литературы. Пудин Александр Иванович] {{ref-ru}}</ref>—  мокшонь  сёрмадей. 
-
+* [[Гангаев, Алексей Кузьмич|Алексей Гангаев]]<ref name="Герои Страны_Гангаев">[http://www.warheroes.ru/hero/hero.asp?Hero_id=2668 Герои Страны. Гангаев Алексей Кузьмич] {{ref-ru}}</ref><ref name="Кшнякин Е. Н ">[http://www.rusnauka.com/10_DN_2014/Istoria/1_164565.doc.htm Кшнякин Е. Н УРОЖЕНЦЫ МОРДОВИИ – ГЕРОИ СОВЕТСКОГО СОЮЗА – УЧАСТНИКИ ФОРСИРОВАНИЯ ДНЕПРА] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+* [[Павлуткина, Валентина Николаевна|Валентина Павлуткина]]<ref name="Администрация">[http://koshelevsky.spassk.pnzreg.ru/users/2100 Администрация Кошелевского сельсовета Спасского района Пензенской области Глава администрации Павлуткина Валентина Николаевна] {{ref-ru}}</ref>— Пензань ёнксонь Спассонь буень Кошелень вельсоветэнь администрациянь Прявт ({{lang-ru|Глава администрации Кошелевского сельсовета Спасского района Пензенской области}})
 == Веленть эрямозо  ==
-Велень мокшотне ульнесть совавтонь православияс 1743-1744 иетнестэ. Ульнесь стявтозь-путозь [[Чувтт|чувт]]осто Никольской церькува ([[1862 ие]]). 
+Велень мокшотне ульнесть совавтонь православияс 1743-1744 иетнестэ. Ульнесь стявтозь-путозь [[Чувтт|чувт]]осто Никольской церькува<ref name="РГО_с. Мордовский Пимбур"/> ([[1862 ие]]). Ульнесть оеньпивтемка. 
+
+Куротне: Большая кур., Вазовка кур., Новая кур., Рабочая кур., Центральная кур.
 
 == Лисьм.: ==
 <references />
