/* Ташто Шайгабуень велеть */

--- a/Ташто_Шайгабуе.mw
+++ b/Ташто_Шайгабуе.mw
@@ -78,7 +78,7 @@
 * [[Лемдяй (Ташто Шайгабуе)|Лемдяй]] – ({{lang-ru|с. Лемдяй}})
 * [[Мигачевка (Ташто Шайгабуе)|Мигачевка]] – ({{lang-ru|п. Мигачевка}})
 * [[Ожгане (Ташто Шайгабуе)|Ожгане]] – ({{lang-ru|д. Новая Теризморга}})
-* [[Сарга (Ташто Шайгабуе)|Сарга]] – ({{lang-ru|с. Сарга}})
+* [[Оргам (Ташто Шайгабуе)|Оргам]] – ({{lang-ru|с. Сарга}})
 * [[Сире Трезморга (Ташто Шайгабуе)|Сире Трезморга]] – ({{lang-ru|с. Старая Теризморга}})
 * [[Сире Шайгав (Ташто Шайгабуе)|Сире Шайгав]] – ({{lang-ru|с. Старое Шайгово}})
 * [[Темяжеле (Ташто Шайгабуе)|Темяжеле]] – (лиякс кортыть: ''Темяш веле'', {{lang-ru|с. Темяшево}})
@@ -136,7 +136,6 @@
 
 човор веле:
 * [[Красная Рудня (Ташто Шайгабуе)|Красная Рудня]] – ({{lang-ru|п. Красная Рудня}}) – эрить мокшот ды рузт
-
 
 == Сёрм.: ==
 * [http://mnogolik-mordovia.mrsu.ru/r_20.htm Многоликая Мордовия:Список населенных пунктов Старошайговского района]{{Ref-ru}}
