*Empty MediaWiki Message*

--- a/Оргам_(Ташто_Шайгабуе).mw
+++ b/Оргам_(Ташто_Шайгабуе).mw
@@ -61,7 +61,7 @@
 '''Оргам<ref name="Память, запечатленная в слове"/>''' ({{Lang-ru|с. Сарга}}) — [[мокшот|мокшонь]]<ref name="РГО_с. Сарга">[http://geo13.ru/reestr/object/1186 Геопортал РГО в Республике Мордовия: с. Сарга] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со. Велесь совавтови [[Ташто Шайгабуе]]с. 
 
 Ашти [[Оргам лисьмапря]]со, кона [[Модаю ляй|Модаю леень]]<ref name="Память, запечатленная в слове"/> сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
-{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Старое Шайгово – веле 30 кардазт-кудот марто Инсаронь уездсэ''.}}
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Сарга – веле 30 кардазт-кудот марто Инсаронь уездсэ''.}}
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Сарга, деревня из 30 дворов  Инсарского уезда. }}
 {{Цитатань пе}}
 Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 108 лом., [[2010 ие]]нь ловномасонть — 38 лом.
