*Empty MediaWiki Message*

--- a/Оргам_(Ташто_Шайгабуе).mw
+++ b/Оргам_(Ташто_Шайгабуе).mw
@@ -58,6 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Оргам (смустьтне)}}
 '''Оргам<ref name="Память, запечатленная в слове"/>''' ({{Lang-ru|с. Сарга}}) — [[мокшот|мокшонь]]<ref name="РГО_с. Сарга">[http://geo13.ru/reestr/object/1186 Геопортал РГО в Республике Мордовия: с. Сарга] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со. Велесь совавтови [[Ташто Шайгабуе]]с. 
 
 Ашти [[Оргам лисьмапря]]со, кона [[Модаю ляй|Модаю леень]]<ref name="Память, запечатленная в слове"/> сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
