*Empty MediaWiki Message*

--- a/Оргам_(Ташто_Шайгабуе).mw
+++ b/Оргам_(Ташто_Шайгабуе).mw
@@ -72,11 +72,12 @@
  
 == Содавикс ломанть те велестэнть ==
 Оргам велесэ чачсть:
-* [[Пьянзин, Федор Федорович|Федор Пьянзин]]<ref name="Библиотека_Пьянзин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=13 Библиотека Мордовской литературы. Пьянзин Федор Федорович] {{ref-ru}}</ref>—  мокшонь  сёрмадей, куляньсёрмадей
 *  Н.С. Алямкин — Н.П.Огаревонь лемсэ МГУ<ref name="Постановление">[http://mordovia.news-city.info/docs/sistemst/dok_oeglyi.htm Постановление Совета Госсобрания РМ от 24.07.95 N 262-I ОБ ЭКСПЕРТНО - ЛИНГВИСТИЧЕСКОМ СОВЕТЕ] {{ref-ru}}</ref>,  филолониянь наукань кандидат
+* [[Орлова, Раиса Константиновна|Раиса Орлова]]<ref name="Библиотека_Орлова ">[http://www.lib.e-mordovia.ru/Library/?Char=%CE&id=0 Библиотека Мордовской литературы. Орлова Раиса Константиновна] {{ref-ru}}</ref>—  мокшонь  валморозей
 *  И.С. Лушкин<ref name="«Мокшень правда» ">[http://www.mokshen-pr.ru/?id_refer=4276 «Мокшень правда» 30.06.2016 №24 «ТЯФТАМА ВАСЕДЕМАТНЕ ЭЖНЕСАЗЬ ВАЙМОТЬ»] {{ref-mdf}}</ref>— «Мокшень правда» кулялопань редактор 
 * А.С. Макарова — ярсамопелень анокстомань важодиця  
 * М.Г. Пьянзин — Нижнёйёнь архитектурань институтонь ушманонь кафедрань прявт, ушманонь наукань кандидат
+* [[Пьянзин, Федор Федорович|Федор Пьянзин]]<ref name="Библиотека_Пьянзин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=13 Библиотека Мордовской литературы. Пьянзин Федор Федорович] {{ref-ru}}</ref>—  мокшонь  сёрмадей, куляньсёрмадей
 * А.С. Чалдаев<ref name="izvmor">[http://izvmor.ru/news/view/2495388 ИМ // В Саранске почтили память видного хозяйственного и партийного деятеля А.С. Чалдаева] {{ref-ru}}</ref><ref name="«Мордовия»">[http://mordoviatv.ru/a-s-chaldaeven-100-ietnenen-erzya/ ФГУП ГТРК «Мордовия»/ А.С. Чалдаевень 100 иетненень] {{ref-myv}}</ref>— партиянь прявт 
 
 == Веленть эрямозо  ==
