*Empty MediaWiki Message*

--- a/Анаю_(Пейкужо_буе).mw
+++ b/Анаю_(Пейкужо_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 367<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 367<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2014
   |плотность              = 
   |агломерация            = 
@@ -58,10 +58,23 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Анаю''' ({{lang-ru|с. Анаево}}) — [[мокшот|мокшонь]]<ref name="Память земли">Цыганкин Д.В. Память земли. – Саранск: Мордов. кн. изд-во, 1993. – 160 с. {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со. Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
+'''Анаю<ref name="Память, запечатленная в слове"/>''' ({{lang-ru|с. Анаево}}) — [[мокшот|мокшонь]]<ref name="Память земли">Цыганкин Д.В. Память земли. – Саранск: Мордов. кн. изд-во, 1993. – 160 с. {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со. Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
 
+Ашти 0,5 вайгельпе [[Санкелян лей|Санкелян леенть]] эйстэ, кона [[Вадолей|Вадолейень]]<ref name="Память, запечатленная в слове"/> сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Анаево – веле 158 кардазт-кудот марто Спасонь уездсэ''.}}
+{{oq|ru|В «СНМ Тамбовской губернии» (1866) – Анаево, село из 158 дворов  Спасского уезда. }}
+{{Цитатань пе}}
 
-== Сёрм.: ==
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 509 лом., [[2010 ие]]нь ловномасонть — 367 лом.
+
+== Веленть лемденть  ==
+Лемесь-антропоним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. Саеви икелень мокшонь '''Анай''' лемстэ ({{lang-mdf|анамс}}  - {{lang-ru|«просить; затребовать»}}) 
+
+== Содавикс ломанть те велестэнть ==
+Анаю велесэ чачсть:
+* [[Нестеров Владимир Иосифович|Владимир Нестеров]]<ref name="Библиотека_Нестеров">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=0 Библиотека Мордовской литературы. Нестеров Владимир Иосифович] {{ref-ru}}</ref>—  мокшонь  сёрмадей
+
+== Лисьм.: ==
 <references />
 [[Category:Мордовиянь велеть|А]]
 [[Category:Пейкужо буень велеть|А]]
