*Empty MediaWiki Message*

--- a/Анаю_(Пейкужо_буе).mw
+++ b/Анаю_(Пейкужо_буе).mw
@@ -64,8 +64,9 @@
 {{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Анаево – веле 158 кардазт-кудот марто Спасонь уездсэ''.}}
 {{oq|ru|В «СНМ Тамбовской губернии» (1866) – Анаево, село из 158 дворов  Спасского уезда. }}
 {{Цитатань пе}}
+Велесь ульнесь стявтозь-путозь ХVI пингэнь<ref name="РГО_с. Анаево">[http://geo13.ru/reestr/object/618 Геопортал РГО в Республике Мордовия: с. Анаево] {{Ref-ru}}</ref> омбоце пелькстэ.
 
-Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 509 лом., [[2010 ие]]нь ловномасонть — 367 лом.
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 509 лом., [[2010 ие]]нь ловномасонть — 367 лом. XIX пин. ульнесть 3600<ref name="РГО_с. Анаево"/> лом.
 
 == Веленть лемденть  ==
 Лемесь-антропоним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. Саеви икелень мокшонь '''Анай''' лемстэ ({{lang-mdf|анамс}}  - {{lang-ru|«просить; затребовать»}}) 
@@ -73,7 +74,8 @@
 == Содавикс ломанть те велестэнть ==
 Анаю велесэ чачсть:
 * [[Нестеров Владимир Иосифович|Владимир Нестеров]]<ref name="Библиотека_Нестеров">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=0 Библиотека Мордовской литературы. Нестеров Владимир Иосифович] {{ref-ru}}</ref>—  мокшонь  сёрмадей
-
+== Веленть эрямозо  ==
+Эриця мокшотне ульнесть совавтозь православияс XVII пингэнть, ды 1740-це<ref name="РГО_с. Анаево"/> иетнестэ, коли ульнесть вейсэнь православияс лемдямот.  
 == Лисьм.: ==
 <references />
 [[Category:Мордовиянь велеть|А]]
