*Empty MediaWiki Message*

--- a/Анаю_(Пейкужо_буе).mw
+++ b/Анаю_(Пейкужо_буе).mw
@@ -73,6 +73,11 @@
 
 == Содавикс ломанть те велестэнть ==
 Анаю велесэ чачсть:
+* Д. П. Волков<ref name="МБОУ «Анаевская СОШ»"/> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+* [[Кирюков, Леонтий Петрович|Леонтий Кирюков]]<ref name="МБОУ «Анаевская СОШ»"/><ref name="«Мокшень правда»_16.11.2015">[http://www.mokshen-pr.ru/?id_refer=4125 «Мокшень правда» 16.11.2015 №  МОКШЭРЗЯНЬ ПРОФЕССИОНАЛЬНАЙ МУЗЫКАТЬ УШЕДЫЕЦ] {{ref-mdf}}</ref> - седямоньсёрмадей
+* А. А. Косов<ref name="МБОУ «Анаевская СОШ»">[http://zpolyana.e-mordovia.ru/content/view/3816 МБОУ «Анаевская СОШ» История школы] {{ref-ru}}</ref> —  мокшонь  валморозей
+* [[Ларионов, Сергей Степанович|С. С. Ларионов]]<ref name="Библиотека_Ларионов">[http://www.lib.e-mordovia.ru/Library/?Char=%CB&id=0 Библиотека Мордовской литературы. Ларионов Сергей Степанович] {{ref-ru}}</ref><ref name="Республиканская">[http://zags.e-mordovia.ru/news/view/16003 Республиканская служба ЗАГС Республики Мордовия. По следу писательского откровения. К 105-летию со дня рождения мордовского писателя С.С. Ларионова] {{ref-ru}}</ref>—  мокшонь  сёрмадей
+* [[Левчаев, Пётр Иванович|Пётр Левчаев]]<ref name="МБОУ «Анаевская СОШ»"/> —  мокшонь  валморозей
 * [[Нестеров Владимир Иосифович|Владимир Нестеров]]<ref name="Библиотека_Нестеров">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=0 Библиотека Мордовской литературы. Нестеров Владимир Иосифович] {{ref-ru}}</ref>—  мокшонь  сёрмадей
 == Веленть эрямозо  ==
 Эриця мокшотне ульнесть совавтозь православияс XVII пингэнть, ды 1740-це<ref name="РГО_с. Анаево"/> иетнестэ, коли ульнесть вейсэнь православияс лемдямот.  
