/* Содавикс ломанть те велестэнть */

--- a/Адаж_(Кадонь_буе).mw
+++ b/Адаж_(Кадонь_буе).mw
@@ -74,7 +74,8 @@
 
 == Содавикс ломанть те велестэнть ==
 Адаж велесэ чачсь:
-* [[Мишанина, Валентина Ивановна|Валентина Мишанина]]<ref name="ГБУ РК_Мишанина">[http://www.nbrkomi.ru/page/2924/  ГБУ РК «Национальная библиотека Республики Коми». Мишанина Валентина Ивановна]{{ref-ru}}</ref>—  мокшонь сёрмадей, прозаик, драматург. 
+* [[Евишев, Григорий Лукьянович|Григорий Евишев]]<ref name="Герои Страны_Гангаев">[http://www.warheroes.ru/hero/hero.asp?Hero_id=2668 Герои Страны. Гангаев Алексей Кузьмич] {{ref-ru}}</ref><ref name="Кшнякин Е. Н ">[http://www.rusnauka.com/10_DN_2014/Istoria/1_164565.doc.htm Кшнякин Е. Н УРОЖЕНЦЫ МОРДОВИИ – ГЕРОИ СОВЕТСКОГО СОЮЗА – УЧАСТНИКИ ФОРСИРОВАНИЯ ДНЕПРА] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+* [[Мишанина, Валентина Ивановна|Валентина Мишанина]]<ref name="ГБУ РК_Мишанина">[http://www.nbrkomi.ru/page/2924/  ГБУ РК «Национальная библиотека Республики Коми». Мишанина Валентина Ивановна]{{ref-ru}}</ref>—  мокшонь сёрмадей, прозаик, драматург.
 
 == Сёрм.: ==
 <references />
