*Empty MediaWiki Message*

--- a/Пангт.mw
+++ b/Пангт.mw
@@ -1,3 +1,4 @@
+[[Артовкс:Edith Wolfson Park 2016 (52).jpg|кенжешка|Пангт]]
 '''Пангт''' (лат. Fungi эли Mycota) — те биологиянь царствосьэрямонь пертпельксенть, кона пурнавты эукариотической организматнень, конататнень эйсэ ули кода [[Кстый|кстыень]], истя [[Ракшат|ракшатнень]] пелькснень. 
 
 Пангтнэ аштить эрьва кодамо биологическоень пелькстнэсэ — ведьсэ, [[Мода|модасо]] ды [[Кошт|коштсо]]. Пангтнэ налксить эрявикс тев биосферасо, явовтыть эрьвакодат органикат, секс пангтнэ улить вардонь зыянонь теиця, конат кандыть пек покш зыян. 
