*Empty MediaWiki Message*

--- a/Дады_(Отяжбуе).mw
+++ b/Дады_(Отяжбуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 12
+  |эрицятне               = 16<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,7 +59,29 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Дады''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Дада<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' — рузонь<ref name="РГО_с. Дады">[http://geo13.ru/reestr/object/330 Геопортал РГО в Республике Мордовия: с. Дады] {{Ref-ru}}</ref> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+Ашти [[Вацярлей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1863 ие]]) ''Дады – веле 33 кардазт-кудот марто Ордань уездсэ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Дады, село из 33 дворов  Ардатовского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 22 лом., [[2010 ие]]нь ловномасонть — 16 лом.
+
+
+Дады (р.)  – н. п. (э. Дада, русск., село Ат.). В «СНМ Симбирской губернии» (1863) – Дады, село из 33 дворов  Ардатовского уезда.
+	< Название – антропоним. Имя Дада упоминается  в переписи 1671 года: «Дадка да Кормишка Лукяновы, у Дадки сын Добрынка» (Материалы генеральной переписи мордвы Алатырского уезда, 1979) > 
+
+== Веленть лемденть  ==
+Лемесь-антропоним<ref name="Память, запечатленная в слове"/>. Саеви икелень '''Дада''' лемстэ, кона лецтяви 1671 иень сёрмадстомасонть: ({{lang-ru|«Дадка да Кормишка Лукяновы, у Дадки сын Добрынка»<ref name="Книга  письма и меры">Книга  письма и меры 1624 году Д. Пушечникова и А. Костяева: Материалы генеральной переписи мордвы Алатырского уезда // Рукописный фонд Научно-исследовательского института гуманитарных наук при Правительстве Республика Мордовия.{{ref-ru}}</ref>}}).
+
+
+== Содавикс ломанть те велестэнть ==
+Дада велесэ чачсь:
+* [[Едунов, Иван Григорьевич|Иван Едунов]]<ref name="Герои Страны_Гангаев">[http://www.warheroes.ru/hero/hero.asp?Hero_id=2668 Герои Страны. Гангаев Алексей Кузьмич] {{ref-ru}}</ref><ref name="Кшнякин Е. Н ">[http://www.rusnauka.com/10_DN_2014/Istoria/1_164565.doc.htm Кшнякин Е. Н УРОЖЕНЦЫ МОРДОВИИ – ГЕРОИ СОВЕТСКОГО СОЮЗА – УЧАСТНИКИ ФОРСИРОВАНИЯ ДНЕПРА] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+
+== Лисьм.: ==
+<references />
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
