*Empty MediaWiki Message*

--- a/Курилова_(Рамаданбуе).mw
+++ b/Курилова_(Рамаданбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/p_Kyrilovo.htm Многоликая Мордовия: Село Курилово {{Ref-ru}}]</ref><ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref><ref name="Феоктистов А.П"/> [[Рамаданбуе]]сэ, [[Мордовия]]со.
+'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Цыганкин">[http://www.cigankin.ru/archives/196 Цыганкин Дмитрий Васильевич. Топонимические поиски…] {{ref-ru}}</ref><ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref><ref name="Феоктистов А.П"/> [[Рамаданбуе]]сэ, [[Мордовия]]со.
 
 Ашти [[Аморда лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) ''Старая Куриловка — 74 кудот марто Саранонь уездсэ''.
 
@@ -71,7 +71,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Куриловасо чачсть:
-* [[Никул Эркай]]<ref name="Многоликая"/>— эрзянь сёрмадей
+* [[Никул Эркай]]<ref name="Библиотека_Никул Эркай">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы. Никул Эркай (Николай Лазаревич Иркаев)] {{ref-ru}}</ref>— эрзянь сёрмадей
 * [[Бажанов, Владимир Васильевич|Владимир Бажанов]]<ref name="Феоктистов А.П">Феоктистов А.П. Очерки по истории формирования мордовских письменно литературных языков / А.П. Феоктистов. — Саранск: Мордов. кн. изд-во, 2008. — 392 с.  ISBN 978-5-7595-1753-5 {{Ref-ru}}</ref> — эрзянь ютавтыця, этнограф
 
 == Веленть эрямозо  ==
