*Empty MediaWiki Message*

--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Никул Эркай<ref name="Библиотека МЛ">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы: Никул Эркай (Николай Лазаревич Иркаев){{Ref-ru}}]</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
+'''Никул Эркай<ref name="Библиотека_Никул Эркай">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы. Никул Эркай (Николай Лазаревич Иркаев)] {{ref-ru}}</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев<ref name="Библиотека_Никул Эркай"/>}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
 
 Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> эрзянь<ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. Теске прядсь колмо классо школанть<ref name="Кудашкина О">Кудашкина Ольга Сергеевна. Поэтика прозы Никула Эркая: диссертация ... кандидата филологических наук : 10.01.02.- Саранск, 2006.- 180 с.: ил. РГБ ОД, 61 06-10/1120 {{ref-ru}}, {{ref-myv}}</ref>. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодлсь Мордовиянь шкинемань НИИ-сэ.
 
@@ -46,7 +46,22 @@
 
 [[1986 ие]]стэ Никул Эркаень 80-иень чачома чистензэ Саран ошсо сонзэ лемсэ ульнесь лемдязь куро Светотехника микробуесэ<ref name="Туристско-информационный центр">[http://turizmrm.ru/their-names/ Туристско-информационный центр Республики Мордовия ИХ ИМЕНАМИ НАЗВАНЫ{{Ref-ru}}]</ref><ref name="saransk-online.info">[http://www.saransk-online.info/info/4/125.html saransk-online.info: ул.НИКУЛА ЭРКАЯ{{Ref-ru}}]</ref>, куро [[Ромоданово (Рамаданбуе)|Ромоданово]]<ref name="Кулят инфо"/> посёлкасо. 2005 иень ожоковонь 21 чистэ Ромадановань куншканьбуень ловнома кудонть икеле ульнесь панжозь валморрзеенть пельскеврунгозо (бюст)<ref name="Геопортал РГО"/>, ды ловномакудоньте максть Никула Эркаень лем<ref name="Кулят инфо"/>.
 
-== Сёрм. ==
+==Библиография ==
+* «Модась одксталесь» валморонь пурнавкс (1932).  
+* «Корёнтнэ наксадсть» ёвтнемань пурнавкс (1932).  
+* «Моро Ратордо» поэма (1936)
+* «Кочказь лирика» валморот ды поэмань ойнань иень (1945)
+* «Стихт ды поэмат»  пурнавкст (1945)
+* «Тундань сад» пурнавкс (1959)
+*  «Теплынь» пурнавкс (1965)
+* «Алешка» повесть (1962)
+*  «Березовая вода» повесть (1963)
+* «Новая родня» повесть (1966)
+* «Митяевы мечтания»  повесть (1975)
+* «Шураган»  повесть (1980)
+* «Родники души» (1981)
+
+== Лисьм. ==
 <references />
 
 [[Category:Ломанть|Э]]
