--- a/Сузгярьге_(Оразайбуе).mw
+++ b/Сузгярьге_(Оразайбуе).mw
@@ -63,7 +63,12 @@
 
 Ашти [[Виляйка лей]]<ref name="Многоликая"/> (эли [[Поварноляй]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>) лангсо. Кода лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Сузгарье - 120 кудот марто Инсаронь уездсэ. 
 
-Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове"/>: сёлт ''Аград''; ''Анискянь киняц'', ''Манягайть фталоц''; курот: ''Бабань курня'', ''Бабань куфня'', ''Васильевка'', ''Кечкас курня'', ''Нахаловка'', ''Од курня'', ''Самодуровка'', ''Томбаль'', ''Центральная'', ''Цирькав курне'', ''Чадаевка''; ''Базар вирня''; латкот: ''Быкофкань лотка'', ''Васенце лотксь'', ''Калма лотка'', ''Лишафтом ляйбря'', ''Микай атянь перянь лоткоц'', ''Томба'', ''Траксонь калма лотка''; ''Варманя''; ''Варсить вирец''; ''Виселкань ки''; ''Гадь''; ''Гадьбря''; ''Гардон''; ''Калма вирь''; лисьмапрят: ''Калма эшине'', ''Поварноляй'' ''Салдатынь эшиня'', ''Солдатонь эшиня''; ''Куженя''; ''Кучка киня''; эрьке ''Лежифтыма''; ''Мази нярь'', ''Мази седь'', ''Омбоце лотконясь''; ''Оцю кипрясь''; ''Поп лятьф''; ''Сарай бруд''; ''Сарай панда''; ''Тёпловкань вирь''; ''Тингоня''; ''Томбалень ки''; ''Тумонал''; ''Уманя''; ''Уманят''. 
+Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове"/>: 
+* сёлт ''Аград''; ''Анискянь киняц'', ''Манягайть фталоц''; 
+* курот: ''Бабань курня'', ''Бабань куфня'', ''Васильевка'', ''Кечкас курня'', ''Нахаловка'', ''Од курня'', ''Самодуровка'', ''Томбаль'', ''Центральная'', ''Цирькав курне'', ''Чадаевка''; ''Базар вирня''; 
+* латкот: ''Быкофкань лотка'', ''Васенце лотксь'', ''Калма лотка'', ''Лишафтом ляйбря'', ''Микай атянь перянь лоткоц'', ''Томба'', ''Траксонь калма лотка''; ''Варманя''; ''Варсить вирец''; ''Виселкань ки''; ''Гадь''; ''Гадьбря''; ''Гардон''; ''Калма вирь''; 
+* лисьмапрят: ''Калма эшине'', ''Поварноляй'', ''Салдатынь эшиня'', ''Солдатонь эшиня''; ''Куженя''; ''Кучка киня''; 
+* эрьке ''Лежифтыма'', ''Мази нярь'', ''Мази седь'', ''Омбоце лотконясь''; ''Оцю кипрясь''; ''Поп лятьф''; ''Сарай бруд''; ''Сарай панда''; ''Тёпловкань вирь''; ''Тингоня''; ''Томбалень ки''; ''Тумонал''; ''Уманя''; ''Уманят''. 
 
 == Веленть лемденть  ==
 Саеви {{Lang-mdf|суза}} {{Lang-ru|«протока; речка, соединяющая два водоема»}} + {{Lang-mdf|гарь ~ гярь ~ керьге}} {{Lang-ru|«деревня»}}> валтнестэ<ref name="Память, запечатленная в слове"/>. 
