--- a/Сузгярьге_(Оразайбуе).mw
+++ b/Сузгярьге_(Оразайбуе).mw
@@ -78,7 +78,7 @@
 * [[Ельмеев Василий Яковлевич|В. Я. Ельмеев]]<ref>[http://spbu.ru/faces/professors/171-sociolog/853-elmeev Ельмеев Василий Яковлевич] {{Ref-ru}}</ref>—  ({{Lang-ru|Доктор философских наук, доктор экономических наук, профессор, почетный работник высшего профессионального образования РФ}}) 
 ==Веленть эрямозо==
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|С]]
