*Empty MediaWiki Message*

--- a/Прхляй_(Оразайбуе).mw
+++ b/Прхляй_(Оразайбуе).mw
@@ -50,7 +50,7 @@
  |шкань каркс             = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 431461
+ |почтовый индекс         = 431462
  |почтовые индексы        = 
  |автомобильный код       = 
  |вид идентификатора      = 
@@ -73,7 +73,15 @@
 
 == Содавикс ломанть те велестэнть ==
 Прхляйсэ чачсть:
+* [[Ерофеев Владимир Трофимович|Владимир Ерофеев]]<ref name="Газета «Республика">[http://rm.saransk.ru/article_976.html  Газета «Республика молодая». Село Перхляй, Рузаевский район] {{ref-ru}}</ref> — технической наукань доктор, профессор,  МГУ Н.П. Огаревонь лемсэ архитектурно-строительной факультетэнь декан
+*П. Ф. Ерофеев — партиянь важодиця 
+*  [[Исаев, Василий Петрович|Василий Исаев]]<ref name="Газета «Республика"/> - ({{Lang-ru|руководитель Мордовского Управления Федеральной антимонопольной службы России}}) 
+* Т. Т. Келейниковаа  —  МАССР-нь заслуженной врач 
+* [[Максимова, Мария Емельяновна|Мария Максимова]]<ref name="Газета «Республика"/> — содавиксэв морыця
+*Кубанцев Т. И. — филологиянь наукань доктор, профессор
 * [[Макулов, Леонид Федорович|Леонид Макулов]]<ref name="Библиотека_Макулов">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=0 Библиотека Мордовской литературы. Макулов Леонид Федорович] {{ref-ru}}</ref>— мокшонь сёрмадей
+* А. А. Сардаев — хозяйствань ветий-прявт 
+
 ==Веленть эрямозо==
 
 == Лисьм.: ==
