*Empty MediaWiki Message*

--- a/Высокая_(Кадонь_буе).mw
+++ b/Высокая_(Кадонь_буе).mw
@@ -62,12 +62,12 @@
 '''Высокая''' ({{lang-ru|д. Высокая}})  — рузонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/k_Visokaya.htm Многоликая Мордовия: Деревня Высокая] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
 
 == Веленть лемденть  ==
-
+*  [[Болдин, Иван Васильевич|Иван Болдин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-полковник
 == Содавикс ломанть те велестэнть ==
 
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
