*Empty MediaWiki Message*

--- a/Сиалеевский_Майдан_(Кадонь_буе).mw
+++ b/Сиалеевский_Майдан_(Кадонь_буе).mw
@@ -60,7 +60,13 @@
 }}
 '''Сиалеевской Майдан''' ({{Lang-ru|Сиалеевский Майдан}})  —  велесь [[Кадоньбуе|Кадоньбуесэ]].
 
-== Сёрм.: ==
+== Содавикс ломанть те велестэнть ==
+Сиалеевской Майдан велесэ чачсть:
+*  [[Молин, Иван Степанович|Иван Молин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
