*Empty MediaWiki Message*

--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -65,6 +65,13 @@
 
 Эрицятнеде 299,1 тёж. ([[2014 ие]]), покшолмазо 71,5 [[Вайгельпе|вп²]]
 
+== Содавикс ломанть тестэнь ==
+Саран ошсо чачсть:
+*  [[Мухин, Владимир Михайлович|Владимир Мухин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
 
 [[Категория:Россия Масторонть ошт]]
 [[Category:Мордовиянь ошт|С]]
