*Empty MediaWiki Message*

--- a/Ямщина_(Инесаро_буе).mw
+++ b/Ямщина_(Инесаро_буе).mw
@@ -60,7 +60,13 @@
 
 '''Ямщина''' ({{Lang-ru|с. Ямщина}})   — веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+== Содавикс ломанть те велестэнть ==
+Ямщина велесэ чачсть:
+*  [[Мухин, Герасим Васильевич|Герасим Мухин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
