*Empty MediaWiki Message*

--- a/Атемарь_(Лямбирьбуе).mw
+++ b/Атемарь_(Лямбирьбуе).mw
@@ -70,7 +70,8 @@
 ==Веленть эрямозо==
 
 == Содавикс ломанть те велестэнть ==
-* [[Дерябин, Алексей Никитович]] (1915—1990) — [[Советэнь Союзонь Мараля]].
+* [[Дерябин, Алексей Никитович|Алексей Дерябин]] (1915—1990) — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+*  [[Прошин Василий Степанович|Василий Прошин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
 
 == Сёрм.: ==
 <references />
