--- a/Пичале_(Тумобуе).mw
+++ b/Пичале_(Тумобуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  622
+  |эрицятне               =  764<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,12 +59,25 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Пичале''' ({{lang-ru|Пуркаево}}) - те велесь Модовиясо, Тумобуесэ.
+'''Пичале''', лиякс: '''Налитова''', '''Пуркаева''' ({{lang-ru|Пуркаево}}) — те эрзянь<ref name="РГО_с. Пуркаево">[http://geo13.ru/reestr/object/438 Геопортал РГО в Республике Мордовия: с. Пуркаево] {{Ref-ru}}</ref> велесь [[Модовия]]со, [[Тумобуе]]сэ.
 
+Ашти [[Учалей]] лисьмапря лангсо, кона [[Улянка лей|Улянка леенть]] сянглей. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1863 ие]]) ''Налитово – веле 162 кардазт-кудот марто Ордань уездсэ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Налитово, село из 162 дворов  Ардатовского уезда.}}
+{{Цитатань пе}}
 
-== Сёрм.: ==
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 1000 лом., [[2010 ие]]нь ловномасонть — 764 лом.
+
+== Веленть лемденть  ==
+Лемесь-антропоним<ref name="Память, запечатленная в слове"/>. Неень шкасто саеви армиянь генералонь М. А. Пуркаевонь лемэнзэ эйстэ. Налитова икелень лемесь саеви кезэрень эрзянь  '''Налит ~ Налитка''' лемстэ, кона ледстяви [[1671 ие]]нь сёрмадстомасонть: ({{lang-ru|имя Налетка упоминается в деревне Старая Морга («Налетова тож»)<ref name="Книга  письма и меры">Книга  письма и меры 1624 году Д. Пушечникова и А. Костяева: Материалы генеральной переписи мордвы Алатырского уезда // Рукописный фонд Научно-исследовательского института гуманитарных наук при Правительстве Республика Мордовия.{{ref-ru}}</ref>}}).
+
+== Содавикс ломанть те велестэнть ==
+Пичале велесэ чачсть:
+*  [[Пуркаевень, Максим Алексеевич|Максим Пуркаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — армиянь генерал
+==Веленть эрямозо==
+[[1966 ие]]нь [[медьковонь 11 чи]]стэ веленть лемесь кармась '''Пуркаево<ref name="РГО_с. Пуркаево"/>'''. Велесэ улить 6<ref name="РГО_с. Пуркаево"/> артезианонь лисьмат.
+== Лисьм.: ==
 <references />
-
 
 [[Category:Мордовиянь велеть|П]]
 [[Category:Тумобуень велеть|П]]
