*Empty MediaWiki Message*

--- a/Пичале_(Тумобуе).mw
+++ b/Пичале_(Тумобуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Пичале''', лиякс: '''Налитова''', '''Пуркаева''' ({{lang-ru|Пуркаево}}) — те эрзянь<ref name="РГО_с. Пуркаево">[http://geo13.ru/reestr/object/438 Геопортал РГО в Республике Мордовия: с. Пуркаево] {{Ref-ru}}</ref> велесь [[Модовия]]со, [[Тумобуе]]сэ.
+'''Пичале''', лиякс: '''Налитова''', '''Пуркаева''' ({{lang-ru|Пуркаево}}) — те эрзянь<ref name="РГО_с. Пуркаево">[http://geo13.ru/reestr/object/438 Геопортал РГО в Республике Мордовия: с. Пуркаево] {{Ref-ru}}</ref> велесь [[Мордовия]]со, [[Тумобуе]]сэ.
 
 Ашти [[Учалей]] лисьмапря лангсо, кона [[Улянка лей|Улянка леенть]] сянглей. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1863 ие]]) ''Налитово – веле 162 кардазт-кудот марто Ордань уездсэ''.}}
@@ -73,7 +73,9 @@
 
 == Содавикс ломанть те велестэнть ==
 Пичале велесэ чачсть:
+*  [[Жадейкин, Максим Степанович|Максим Жадейкин]]<ref name="Новости Мордовии и Саранска">[http://113rus.ru/news/13336 Новости Мордовии и Саранска, Пуркаевцы открыли секрет «мордовской тайги»] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 *  [[Пуркаевень, Максим Алексеевич|Максим Пуркаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — армиянь генерал
+
 ==Веленть эрямозо==
 [[1966 ие]]нь [[медьковонь 11 чи]]стэ веленть лемесь кармась '''Пуркаево<ref name="РГО_с. Пуркаево"/>'''. Велесэ улить 6<ref name="РГО_с. Пуркаево"/> артезианонь лисьмат.
 == Лисьм.: ==
