--- a/Береговые_Сыреси_(Ицял_буе).mw
+++ b/Береговые_Сыреси_(Ицял_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 294<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 294<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,9 +58,14 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Береговые Сыреси''' ({{Lang-ru|с. Береговые Сыреси}})  —  велесь [[Ицял буе|Ицял буесэ]].
+'''Береговые Сыреси''' ({{Lang-ru|с. Береговые Сыреси}})  — рузонь велесь [[Ицял буе|Ицял буесэ]].
 
-== Сёрм.: ==
+== Содавикс ломанть те велестэнть ==
+Береговые Сыреси велесэ чачсь:
+* [[Турунов, Иван Евграфович|Иван Турунов]]<ref name="Герои Страны_Гангаев">[http://www.warheroes.ru/hero/hero.asp?Hero_id=2668 Герои Страны. Гангаев Алексей Кузьмич] {{ref-ru}}</ref><ref name="Кшнякин Е. Н ">[http://www.rusnauka.com/10_DN_2014/Istoria/1_164565.doc.htm Кшнякин Е. Н УРОЖЕНЦЫ МОРДОВИИ – ГЕРОИ СОВЕТСКОГО СОЮЗА – УЧАСТНИКИ ФОРСИРОВАНИЯ ДНЕПРА] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
